@@ -26,12 +26,14 @@ import net.oauth.OAuthMessage;
 
 import org.restlet.Context;
 import org.restlet.data.ChallengeRequest;
+import org.restlet.data.ChallengeScheme;
 import org.restlet.data.MediaType;
 import org.restlet.data.Request;
 import org.restlet.data.Response;
 import org.restlet.data.Status;
 import org.restlet.resource.Representation;
 import org.restlet.resource.Resource;
+import org.restlet.resource.ResourceException;
 import org.restlet.resource.StringRepresentation;
 import org.restlet.resource.Variant;
 
@@ -50,8 +52,11 @@ public class AccessTokenResource extends Resource {
      * Constructor.
      * 
      * @param context
+     *            The parent context.
      * @param request
+     *            The current request.
      * @param response
+     *            The current response.
      */
     public AccessTokenResource(Context context, Request request,
             Response response) {
@@ -65,7 +70,8 @@ public class AccessTokenResource extends Resource {
     }
 
     @Override
-    public void acceptRepresentation(Representation entity) {
+    public void acceptRepresentation(Representation entity)
+            throws ResourceException {
         handle();
     }
 
@@ -74,13 +80,18 @@ public class AccessTokenResource extends Resource {
         return true;
     }
 
-    private void handle() {
+    /**
+     * Handles both GET and POST requests.
+     * 
+     * @throws ResourceException
+     */
+    private void handle() throws ResourceException {
         final OAuthMessage requestMessage = OAuthHelper.getMessage(
                 getRequest(), getLogger());
         final OAuthAccessor accessor = this.provider
                 .getAccessor(requestMessage);
         final ChallengeRequest challengeRequest = new ChallengeRequest(
-                OAuthGuard.SCHEME, this.realm);
+                ChallengeScheme.HTTP_OAUTH, this.realm);
 
         if (accessor == null) {
             getResponse().setChallengeRequest(challengeRequest);
@@ -120,13 +131,12 @@ public class AccessTokenResource extends Resource {
                             "oauth_token", accessor.accessToken,
                             "oauth_token_secret", accessor.tokenSecret))));
         } catch (final IOException e) {
-            // TODO Auto-generated catch block
-            e.printStackTrace();
+            throw new ResourceException(e);
         }
     }
 
     @Override
-    public Representation represent(Variant variant) {
+    public Representation represent(Variant variant) throws ResourceException {
         handle();
         return getResponse().getEntity();
     }
